2003-02-23    <harri.kaimio@nokia.com>

	* PhotoFolder.java (modified): Added notification of parents of subfolder modification
	(delete): Bug fix: a new transaction was created for object deletion even in transaction context
	(getRoot): Bug fix: a new transaction was created for object deletion even in transaction context
